# margaret

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: steady_state_1d.py  time_dependent_1d.py
packaging/: launcher.py
src/margaret/: __init__.py  __main__.py  app.py  constants.py
src/margaret/core/: __init__.py  flux_model.py
src/margaret/gui/: __init__.py  array_picker.py  plot_canvas.py  spectrum_window.py  start_page.py  theme.py
src/margaret/io/: __init__.py  arrays.py
tests/: test_core.py
