[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "margaret"
version = "0.1.0"
description = "Modular Analysis and Reactor Graphics Application for Radiation and Energy Tallies"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "PyQt6>=6.5",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "h5py>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
]

[project.scripts]
margaret = "margaret.app:main"

[project.gui-scripts]
margaret-gui = "margaret.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
